--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,12 +1,14 @@
 <h2>rails問題アプリ</h2>
-<%question_number += 1%>
-<%= form_tag(judge_last_question) do %>
-    question = Qustion.find_by_question_number(question_number)
-    <h1>第<%=question_number%>問</h1>
-    <%=question.problem%></br>
-      <% question.choices.each do |choice| %>
-        <label><%= radio_button "question", question.id, choice.id %><%=choice.content%></label></br>
-      <% end %>
-  <% end %>
+<%= form_tag next_question_path do %>
+  <h1>第<%= session[:question_number].to_i + 1 %>問</h1>
+    <%= @question.content %></br>
+    <% @question.choices.each do |choice| %>
+      <label>
+        <%= radio_button "choice", "id", choice.id %>
+        <%= hidden_field_tag :question_id, @question.id %>
+        <%= choice.content %>
+      </label>
+      </br>
+    <% end %>
   <%= submit_tag('答え合わせ') %>
 <% end %>
