--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <% if user_signed_in? %>
+    <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
+  <% else %>
+    <li><%= link_to 'ログイン', new_user_session_path  %></li>
+    <li><%= link_to 'サインアップ', new_user_registration_path %></li>
+  <% end %>
   <title>RailsQ2</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
