--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,16 +1,15 @@
 <h2>rails問題アプリ</h2>
-<%= form_tag next_question_path do %>
-  <h1>第<%= session[:question_number].to_i + 1 %>問</h1>
+<%= form_tag question_path(params[:id]), method: "PUT" do %>
+  <h1>第<%= @questions.index(@question) + 1 %>問</h1>
     <%= @question.content %></br>
     <% @question.choices.each do |choice| %>
       <label>
         <%= radio_button "choice", "id", choice.id %>
-        <%= hidden_field_tag :question_id, @question.id %>
         <%= choice.content %>
       </label>
       </br>
     <% end %>
-    <% if session[:question_number].to_i + 1 == 4 %>
+    <% if @question_index == 4 %>
       <%= submit_tag('結果を表示') %>
     <% else %>
       <%= submit_tag('次の問題へ') %>
