--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,7 +2,7 @@
 <%= form_tag question_path(params[:id]), method: "PUT" do %>
   <h1>第<%= @questions.index(@question) + 1 %>問</h1>
     <%= @question.content %></br>
-    <% @question.choices.each do |choice| %>
+    <% @question.choices.shuffle.each do |choice| %>
       <label>
         <%= radio_button "choice", "id", choice.id %>
         <%= choice.content %>
